tests/suite/errors/e01_undefined_variable.rs
// err: undefined variable `x`

fn main() {
    println!("{}", x);
}
